[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Weapons/Laser/Laser.gd" type="Script" id=1]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 200, 10 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Laser" type="Node2D"]
script = ExtResource( 1 )

[node name="Mesh" type="MeshInstance2D" parent="."]
position = Vector2( 100, 0 )
scale = Vector2( 1, 1e-005 )
mesh = SubResource( 1 )

[node name="ParticlesLeft" type="Particles2D" parent="."]
position = Vector2( 10, -15 )
emitting = false
lifetime = 0.1
process_material = SubResource( 2 )

[node name="ParticlesRight" type="Particles2D" parent="."]
position = Vector2( 10, 15 )
emitting = false
lifetime = 0.1
process_material = SubResource( 2 )

[node name="ParticlesCenter" type="Particles2D" parent="."]
emitting = false
lifetime = 0.1
process_material = SubResource( 2 )
